-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 190908) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z[.R]][-extraT]" :

  X = major version  - incremented after major redesigns
  Y = minor version  - incremented when new features are added
  Z = micro version  - incremented if major.minor version is not 
		       modified (optional)
  R = revision       - urgent fixes to planned releases (optional)

  extraT             - 'beta', 'pre' and 'rc' releases (optional)

Howto for reading the entries:

  added/removed = a new/removed feature, interfaces, or new 
                  implementation of some feature
  changed       = changed behaviour, modified implementation, APIs, etc
  fixed         = fixed bugs, "features" and other sources of problems

  [foobar]      = tag identifying the author of the change; see 
	          README for a complete list contributor tags; entries 
		  with no tags are from the main author(s)

-----------------------------------------------------------------------

xx0y2008 (v2.6.0) -** stable release **-
	- added: new optional params to 'jack' -> 'jack,clientname,portprefix';
		 replaces old interfaces 'jack_auto', 'jack_generic' 
		 and 'jack_alsa'; see ecasound(1) for more details
	- changed: deprecated 'jack_auto', 'jack_generic' and
	           'jack_alsa'
	- changed: numbering of JACK ports created with 'jack' and
	 	   'jack_generic' starts from "_1" separately for 
		   each prefix [dsacre]
	- fixed: do not limit max-gain reported by '-ev' to [1,max]
		 value range
        - fixed: avoid denormal numbers in '-ete' (leads to unusually
		 high CPU load)
24082008 (v2.5.2) -** stable release **-
	- fixed: bug in channel routing of LADSPA plugins that have
		 more audio output ports than input ports
21082008 (v2.5.1) -** stable release **-