@@ -1,4 +1,4 @@
-.TH "ecasound" "1" "16\&.08\&.2008" "" "Multimedia software"
+.TH "ecasound" "1" "19\&.09\&.2008" "" "Multimedia software"
 
 .PP 
 .SH "NAME"
@@ -382,8 +382,8 @@ More details about ecasound\&'s JACK support can be found
 from Ecasound User\&'s Guide\&.
 .IP 
 \fBDepracated interfaces\fP Ecasound 2\&.5 and older supported
-"jack_alsa" and "jack_generic" object types, but these are
-now replaced by a more generic "jack" interface, and thus are
+"jack_alsa", "jack_auto" and "jack_generic" object types, but these 
+are now replaced by a more generic "jack" interface, and thus are
 now deprecated (they work but are no longer documented)\&.
 .IP 
 .IP "Libaudiofile"
