@@ -5,7 +5,7 @@
 <body>
 <hr>
 <h1>ecasound</h1>
-<h2>16.08.2008</h2>
+<h2>19.09.2008</h2>
 
 <html><head>
 <link rev="made" href="mailto:kvehmanen -at- eca -dot- cx">
@@ -22,7 +22,7 @@
 <hr>
 <h1>ecasound(1)</h1>
 <h2> Multimedia software</h2>
-<h2>16.08.2008</h2>
+<h2>19.09.2008</h2>
 
 
 <p>
@@ -423,8 +423,8 @@ More details about ecasound's JACK support can be found
 from Ecasound User's Guide.
 <p>
 <strong>Depracated interfaces</strong> Ecasound 2.5 and older supported
-"jack_alsa" and "jack_generic" object types, but these are
-now replaced by a more generic "jack" interface, and thus are
+"jack_alsa", "jack_auto" and "jack_generic" object types, but these 
+are now replaced by a more generic "jack" interface, and thus are
 now deprecated (they work but are no longer documented).
 <p>
 <p><dt><strong>Libaudiofile</strong><dd>
