@@ -37,8 +37,8 @@ dnl
 dnl defines: LIBECASOUND_VERSION, LIBECASOUNDC_VERSION, LIBKVUTILS_VERSION
 dnl ---
 
-LIBECASOUND_VERSION=20
-LIBECASOUND_VERSION_AGE=0
+LIBECASOUND_VERSION=21
+LIBECASOUND_VERSION_AGE=1
 LIBECASOUNDC_VERSION=1
 LIBECASOUNDC_VERSION_AGE=0
 LIBKVUTILS_VERSION=8
