@@ -1,3 +1,8 @@
+2008-08-20  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
+
+	* jack-connection.h (file added): 
+	* library interface version to 21:0:1.
+
 2008-08-21  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
 
 	* library interface version 20 frozen (2.5.1 release)
